app.css
svg {
  background-color: #FFF;
  cursor: default;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}

#subset {
  /*position: absolute;*/
  float:left;margin-right:.5em;
  width: 100%;
  height: 100%;
  padding: 10px;
  overflow:scroll;
  background-color: white;
  /*-webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);*/
  pointer-events: none;
}
			
#setx {
  /*position: absolute;*/
  float:left;margin-right:.5em;
  width: 100%;
  height: 100%;
  padding: 10px;
  overflow:scroll;
  background-color: white;
  /*-webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);*/
  pointer-events: none;
}
			
.hidden {
  display: none;
}

.arc path {
  stroke: #fff;
}

svg:not(.active):not(.ctrl) {
  cursor: crosshair;
}

path.link {
  fill: none;
  stroke: #000;
  stroke-width: 2px;
  cursor: default;
}

svg:not(.active):not(.ctrl) path.link {
  cursor: pointer;
}

path.link.selected {
  stroke-dasharray: 10,3;
}

path.link.dragline {
  pointer-events: none;
}

path.link.hidden {
  stroke-width: 0;
}

circle.node {
  stroke-width: 1.5px;
  cursor: pointer;
}

circle.node.reflexive {
  stroke: #000 !important;
  stroke-width: 4px;
}

text {
  font: 12px sans-serif;
  pointer-events: none;
}

text.id {
  text-anchor: middle;
  font-weight: bold;
}

.left {
    width: 33.3%;
    height:600px;
    box-sizing: border-box; margin: 0;
    overflow:scroll;
}
#main svg {
    width:100%;
    height:600px;
}
#main.svg-leftpanel svg, #main.svg-rightpanel svg {width: calc(100% - 300px);}
#main.svg-leftpanel.svg-rightpanel svg {width: calc(100% - 300px);}
/* #main.svg-marg-left svg {margin-left:0px;}
#main.svg-marg-right svg {margin-right:0px;} */

#option.navbar {
    padding:.5em;
    margin-bottom:0;
}
#option {
    position:relative;
}

div.popover.variables {
    max-width:none;
    width:300px;
}
div.popover.variables div.popover-content.form-horizontal {
    padding:0;
}
div.popover.variables div.popover-content.form-horizontal .form-group {
    margin-bottom:0;
}

#leftpanel {
    /*float:left;*/
    border:1px solid #ADADAD;
    width: 20%;
}
#leftpanel button {/*border:1px solid #ADADAD; border-bottom-width:0; border-radius:0;*/}
#leftpanel #leftContentArea div {display:none;}
#leftpanel #leftContentArea div.active {display:block;}

//#leftpanel.expandpanel {width:600px;}
#leftpanel.expandpanel {width:40%;}
#leftpanel.expandpanel div#toggleLpanelicon {left:calc(100% - 28px);}

#leftpanel.closepanel {width:1px;}
#leftpanel.closepanel div.btn-toolbar {display:none;}
/*#leftpanel.closepanel div.btn-group.closepanel {display:none;}*/
#leftpanel.closepanel div.row-fluid.closepanel {display:none;}
#leftpanel div#toggleLpanelicon {width:32px;height:30px;position:absolute;top:calc(50% - 15px);left:calc(100% - 28px);} /*border:1px solid #ADADAD;border-width-left:0;}*/
#leftpanel.closepanel div#toggleLpanelicon {left:2px;}
#leftpanel.closepanel div#toggleLpanelicon span.glyphicon{
    -moz-transform: rotate(-180deg);
    -webkit-transform: rotate(-180deg);
    transform: rotate(-180deg);
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
}   /* Maybe should just swap image? */

#rightpanel {
  /*  right:0;
    position:absolute; */
    border:1px solid #ADADAD;
    width:20%
}
/*
#rightpanel:hover {
    width:50%;
}*/


/*
#rightpanel div#toggleRpanelicon span.glyphicon {
    -moz-transform: rotate(-180deg);
    -webkit-transform: rotate(-180deg);
    transform: rotate(-180deg);
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
}
*/

#rightpanel #rightContentArea div {display:none;}
#rightpanel #rightContentArea div.active {display:block;}

//#rightpanel.expandpanel {width:600px;}
#rightpanel.expandpanel {width:40%;}
#rightpanel.expandpanel div#toggleRpanelicon {right:calc(100% - 29px);}

#rightpanel.closepanel {width:1px;}
#rightpanel.closepanel ul.nav-tabs {display:none;}
#rightpanel.closepanel div.row-fluid.closepanel {display:none;}
#rightpanel div#toggleRpanelicon {width:32px;height:30px;position:absolute;top:calc(50% - 15px);right:calc(100% - 29px);}/*border:1px solid #ADADAD;border-width-left:0;}*/
#rightpanel.closepanel div#toggleRpanelicon {left:2px;}
#rightpanel.closepanel div#toggleRpanelicon span.glyphicon{
    -moz-transform: rotate(-180deg);
    -webkit-transform: rotate(-180deg);
    transform: rotate(-180deg);
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
}   /* Maybe should just swap image, but this currently works */

#main {
    /* float:left; */
    border:1px solid #ADADAD;
    /* width: 85%; */
    width: 100%;
    margin-bottom:160px;
}

.transformTool {
    height:8%;
    width:14%; 
    left:21%;
    top: 0;
    position:absolute;
    margin-left:10px; 
    margin-top:10px;
/*    background:#F9F9F9;
    border:1px solid #ADADAD;  */
}

#transSel li:hover { background-color:#FA8072; cursor:pointer;}
#transList li:hover { background-color:#FA8072; cursor:pointer;}

#spacetools {
    z-index: 17;
}
.spaceTool {
    top:0; 
    right:21%;
    margin-right:10px; 
    margin-top:10px; 
    position:absolute;
}
.spaceTool button:first-child {
    margin-right:1em;
}
.spaceTool button span {
    font-size:1em;
    color:#818181;
    pointer-events:none;
}

#transformations {
    z-index: 16;
}
#transformations ul, #transformations ul li {
    list-style:none;
    margin-left:0;
    padding-left:0;
}
#transformations ul li {
    padding:1px 4px;
}

.legendary {
    width:10%;
    position:absolute;
    bottom:0;
    right:21%;
    margin-right:10px;
    margin-bottom:10px;
}
.legendary .clearfix {
    margin-bottom:4px;
}
.legendary .rectColor {
    float:left;
    width:20px;
    height:20px;
    margin-right:4px;
    opacity: 0.5;
}
.legendary .rectLabel {
    float:left;
}

#sandbox {
    width:500px;
    height:400px;
}

/* p { padding-left: 15px; } */

path { 
    fill: steelblue;
}

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}

.brush .extent {
    stroke: #fff;
    fill-opacity: .125;
    shape-rendering: crispEdges;
}

.handle {
  fill: #fff;
  stroke: #000;
  stroke-opacity: .5;
  stroke-width: 1.25px;
  pointer-events: fill;
}

table, th, td {
    border-collapse: collapse;text-align:right;
}
td {
    padding:4px;
}

/* Carousel */
.carousel-indicators {
    top:20px;
    bottom:auto;
}
.carousel-indicators li {
    border: 1px solid #818181;
}
.carousel-indicators li.active {
    background-color: #818181;
}
.carousel-indicators li#create, .carousel-indicators li#delete {
    border: 0;
    border-radius: 0;
    background-color: inherit;
    text-indent:0;
    font-size:12px;
    width:12px;
    height:12px;
    line-height:12px;
}
.carousel-indicators li#create .glyphicon {
    top:0;
}

.carousel-linked-nav,
.item img {
  display: block; 
  margin: 0 auto;
}

.carousel-linked-nav {
  width:200px;
  margin: 10px auto;   
}
.carousel-linked-nav li {position:relative;}

.pagination .carousel-control {
  font-size: inherit;
  width: auto;
  opacity: 1;
  text-shadow: none;
}

